demo-app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/gnunn1/simple-httpd
  name: plugin-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: plugin-demo-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: plugin-demo-app
    spec:
      containers:
      - env:
        - name: APP_ENV
          value: ${APP_ENV}
        image: quay.io/gnunn/simple-httpd:latest
        imagePullPolicy: Always
        name: plugin-demo
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
