demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/gnunn1/simple-httpd
  name: plugin-demo
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 8080
  selector:
    app: plugin-demo-app
