demo-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: plugin-demo
spec:
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: plugin-demo
    weight: 100
  wildcardPolicy: None
